_sass/base.scss
@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=Playfair:ital,opsz,wght@0,5..1200,300..900;1,5..1200,300..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');

$container-max-width: 720px;
$container-width: 90%;
$font: "Roboto";

:root {
  --main-color: #ff2555;
  --background-color: #0c0c0c;

  --heading-color: #dddddd;
  --text-color: #999999;

  --highlight-bg-color: #1a1a1a;
  --highlight-bg-color-lighter: #222222;

  --default-border: 1px solid #33333375;
  --default-transition: 150ms ease-in;
}

::selection {
  background-color: var(--main-color);
  color: var(--background-color);
}

* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

html {
  scroll-behavior: smooth;
}

body {
  color: var(--text-color);
  font-family: $font;
  line-height: 1.7rem;

  background-color: var(--background-color);
  width: $container-width;
  max-width: $container-max-width;
}

h1, h2, h3 {
  color: var(--heading-color);
  margin-bottom: 1rem;
}

a {
  color: var(--main-color);
  text-decoration: none;
  transition: var(--default-transition);

  i {
    cursor: pointer;
  }

  &:not(.raw-link) {
    border-bottom: 1px solid var(--main-color);

    &:hover {
      background-color: var(--main-color);
      color: var(--background-color);
    }
  }

  &[target="_blank"]:not(.no-symbol):after {
    content: " 🡕"; // fix later: lazy way, may not work in some devices
  }
}


.site {
  display: grid;
  grid-template-columns: minmax(0, 1fr);
  grid-template-rows: auto 1fr auto;
  min-height: 100dvh;
}

.container {
  margin: 0 auto;
  padding-top: 4rem;

}

.site-footer {
  display: flex;
  justify-content: end;

  border-top: var(--default-border);
  margin-top: 4rem;
  padding-bottom: 4rem;
  padding-top: .7rem;
  margin: 0 auto;
}

.author-about {
  border-bottom: var(--default-border);
  padding-bottom: 1rem;

  .author-avatar {
    align-self: center;
    border-radius: 100%;
    margin-bottom: 1rem;
    max-width: 8rem;
  }

  .author-links {
    display: flex;
    gap: .5rem;
    list-style: none;
    margin-top: .5rem;

    .author-link {
      display: flex;
      align-items: center;
      justify-content: center;
      border-radius: .3rem;
      border: var(--default-border);
      color: var(--text-color);
      min-height: 2rem;
      min-width: 2rem;

      &:hover {
        background-color: var(--highlight-bg-color);
      }
    }
  }
}

.site-early {
  display: flex;
  background-color: #33333375;

  .site-early-message {
    margin-bottom: 1rem;
    padding: .5rem
  }

  .site-early-image {
    max-width: 12rem;
  }
}

